--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,3 +5,4 @@ export(seq_ggplot_title_highlight)
 export(seq_heatscale)
 export(seq_palette)
 export(seq_plotly_minimal)
+export(seq_shiny_bslib_theme)
